--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,6 @@
 body{
-
+    margin: 0 auto;
+    padding: 0 ;
     font-family: Signika, serif;
     color: #272A3D;
 }
@@ -26,7 +27,6 @@ a{
 
 .mainContent{
     margin-left: 10%;
-
 }
 
 .textLogo{
@@ -35,6 +35,26 @@ a{
 
 .recentQuizzes{
     display: flex;
-    gap: 5%;
+    gap: 50px;
+}
+
+.indexButton{
+    background-color: #272A3D;
+    color: white;
+    font-size: 30px;
+    padding: 15px 32px;
+    border-radius: 10rem;
+}
+
+footer{
+    background-color: #272A3D;
+    color: white;
+    padding: 1rem;
+}
+
+.footerGrid{
+    display: grid;
+    grid-template-columns: 30em 30em;
+    gap: 10rem;
 }
 
