--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,6 @@
 body{
     margin: 0 auto;
-    padding: 0 ;
+    padding: 0;
     font-family: Signika, serif;
     color: #272A3D;
 }
@@ -41,7 +41,7 @@ a{
 .indexButton{
     background-color: #272A3D;
     color: white;
-    font-size: 30px;
+    font-size: 20px;
     padding: 15px 32px;
     border-radius: 10rem;
 }
@@ -58,3 +58,7 @@ footer{
     gap: 10rem;
 }
 
+.registrationForm{
+    margin-left: 33%;
+    margin-right: 33%;
+}
