--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: Signika;
+    font-family: "Signika Bold";
     src: local("../../public/fonts");
 }
 
@@ -39,8 +39,6 @@ a{
     display: flex;
     justify-content: space-evenly;
     gap: 1.5rem;
-}
-.dropPosition{
 }
 
 .dropdownMenu{
@@ -148,8 +146,9 @@ form{
 
 /*-------------Style for Register Form-----------*/
 .registrationForm{
-    padding-top: 14vh;
-    max-width: 100vh;
+    padding-top: 10vh;
+    max-width: 100%;
+    padding-bottom: 10vh;
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
@@ -185,8 +184,9 @@ form{
 
 /*---------------------------- Style For Login Form-----------------------*/
 .loginForm {
-    padding-top: 14vh;
-    max-width: 100vh;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    max-width: 100%;
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
