--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -380,4 +380,108 @@ form{
     padding: 1rem;
 }
 
+/*--------------------Style for Results Page-----------------*/
+
+.resultsPage {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: auto;
+}
+
+.resultsPage h1 {
+    margin-top: 0;
+}
+
+.resultsMain {
+    display: flex;
+    width: 100%;
+    margin: auto;
+    border-top: #272A3D solid 1px;
+    border-bottom: #272A3D solid 1px;
+}
+
+.resultsTable, .feedbackTable {
+    flex: 1;
+    padding: 20px;
+}
+
+.resultsTable h2, .feedbackTable h2 {
+    margin-top: 0;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th {
+    padding: 10px;
+    text-align: left;
+    border: 2px solid #272A3D;
+
+}
+
+td {
+    padding: 10px;
+    text-align: left;
+    border: 2px solid #272A3D;
+    height: 17rem;
+}
+
+.feedback {
+    padding: 10px;
+    border: 2px solid #272A3D;
+    background-color: #fafafa;
+    height: 80%;
+}
+
+.container {
+    display: flex;
+    width: 70%;
+    height: 150px;
+    align-items: stretch;
+}
+
+textarea {
+    width: 50%;
+    resize: none;
+    border-color: #434867;
+    margin: 0;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: column;
+    background-color: #434867;
+    width: 10%;
+    padding: 10px;
+}
+
+.button1 {
+    width: 90%;
+    margin: 5px  auto;
+    padding: 10px;
+    color: #fff;
+    background-color: #272A3D;
+    border: none;
+    cursor: pointer;
+    border-radius: 20px;
+}
+
+.button2 {
+    width: 50%;
+    padding: 10px;
+    color: #fff;
+    background-color: #272A3D;
+    border: none;
+    cursor: pointer;
+    margin: 5px;
+    border-radius: 20px;
+}
+
+.buttons button:hover {
+    background-color: #555;
+}
+
 /*WIP since the whole page is component*/
