--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -205,6 +205,7 @@ form{
 }
 
 .registrationForm h1 {
+    text-align: center;
     font-size: var(--font-size-large);
     font-family: var(--main-font);
 }
@@ -259,6 +260,7 @@ form{
     display: flex;
     align-items: center;
 }
+
 .loginForm form {
     display: flex;
     flex-direction: column;
