--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -920,7 +920,7 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #272A3D;
 }
 
 .score-text {
@@ -1031,7 +1031,7 @@ button:hover {
 }
 
 .quiz-upload-popup-box button:hover {
-    background-color: #0056b3;
+    background-color: #272A3D;
 }
 
 /* Styles for the error and success popups */
@@ -1091,7 +1091,7 @@ button:hover {
 .flashcards {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 20px;
+    gap: 150px; /* Increased gap between the flashcards */
     width: 100%;
     max-width: 1200px;
 }
@@ -1137,10 +1137,75 @@ button:hover {
 }
 
 .flashcard-back {
-    background: #007bff;
+    background: #272A3D;
     color: white;
     transform: rotateY(180deg);
 }
+
+.popup_new_quiz_submit {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+.popup_new_quiz_submit.visible {
+    display: flex;
+}
+
+.popup_new_quiz_submit_content {
+    background: #ffffff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+.popup_new_quiz_submit_content h2 {
+    margin-bottom: 20px;
+}
+
+.popup_new_quiz_submit_content p {
+    margin-bottom: 10px;
+}
+
+.popup_new_quiz_submit_content button {
+    background-color: #272A3D;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    margin: 10px;
+}
+
+.popup_new_quiz_submit_content button:hover {
+    background-color: #272A3D;
+}
+
+.back-to-quiz-button {
+    background-color: #272A3D;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    text-decoration: none;
+    margin-top: 50px;
+
+}
+
+.back-to-quiz-button:hover {
+    background-color: #0056b3;
+}
+
 
 
 
